<resources>
    <string name="app_name">FC Kozia Wólka</string>
    <string name="app_name1">FC Kozia Wólka</string>
    <string name="str_home">Strona główna</string>
    <string name="str_team">Drużyna</string>
    <string name="str_reserves">Rezerwy</string>
    <string name="str_staff">Sztab szkoleniowy</string>
    <string name="str_training">Treningi</string>
    <string name="str_contact">Kontakt</string>
    <string name="str_herb">Herb</string>
    <string name="str_schedule">Terminarz</string>
    <string name="str_training_dojazd">Sprawdź dojazd</string>
    <string name="str_training_day">Piątki 17:00 – 18:30</string>
    <string name="str_training_day2">Środy 20:00 – 21:30</string>
    <string name="str_training_day3">Poniedziałki 17:00 – 18:30</string>
    <string name="str_training_message">Treningi odbywają się w:</string>
    <string name="str_contact_message">Wpisz swoją wiadomość</string>
    <string name="str_contact_button">Wyślij</string>
    <string name="title_activity_map">Map</string>
    <string name="subject_autofill">Wpisz temat</string>
    <string name="reserves_player_photo">reserves_player_photo</string>
    <string name="reserves_position1">Bramkarz</string>
    <string name="reserves_position2">Lewy obrońca</string>
    <string name="reserves_position3">Prawy obrońca</string>
    <string name="reserves_position4">Środkowy obrońca</string>
    <string name="reserves_position5">Środkowy obrońca</string>
    <string name="reserves_position6">Defensywny pomocnik</string>
    <string name="reserves_position7">Środkowy pomocnik</string>
    <string name="reserves_position8">Ofensywny pomocnik</string>
    <string name="reserves_position9">Lewoskrzydłowy</string>
    <string name="reserves_position10">Prawoskrzydłowy</string>
    <string name="reserves_position11">Napastnik</string>
    <string name="reserves_position12">Rezerwowy</string>
    <string name="reserves_position13">Rezerwowy</string>
    <string name="reserves_position14">Rezerwowy</string>
    <string name="reserves_position15">Rezerwowy</string>
    <string name="reserves_position16">Rezerwowy</string>
    <string name="reserves_name_postion1">Gianluigi Buffon</string>
    <string name="reserves_name_postion2">Merih Demiral</string>
    <string name="reserves_name_postion3">Dejan Kulusevski</string>
    <string name="reserves_name_postion4">Giorgio Chiellini</string>
    <string name="reserves_name_postion5">Leonardo Bonucci</string>
    <string name="reserves_name_postion6">Matthijs de Ligt</string>
    <string name="reserves_name_postion7">Weston McKennie</string>
    <string name="reserves_name_postion8">Federico Chiesa</string>
    <string name="reserves_name_postion9">Paulo Dybala</string>
    <string name="reserves_name_postion10">Juan Cuadrado</string>
    <string name="reserves_name_postion11">Cristiano Ronaldo</string>
    <string name="reserves_name_postion12">Alvaro Morata</string>
    <string name="reserves_name_postion13">Arthur Melo</string>
    <string name="reserves_name_postion14">Wojciech Szczęsny</string>
    <string name="reserves_name_postion15">Adrien Rabiot</string>
    <string name="reserves_name_postion16">Aaron Ramsey</string>
    <string name="staff_photo">staff photo</string>
    <string name="staff_position1">Właściciel</string>
    <string name="staff_position2">Dyrektor ds. sportowych</string>
    <string name="staff_position3">Główny trener</string>
    <string name="staff_position4">Asystent trenera</string>
    <string name="staff_position5">Trener motoryczny</string>
    <string name="staff_position6">Trener bramkarzy</string>
    <string name="staff_position7">Fizjoterapeuta</string>
    <string name="staff_name_position1">Roman Abramovich</string>
    <string name="staff_name_position2">Thomas Tuchel</string>
    <string name="staff_name_position3">Zinedine Zidane</string>
    <string name="staff_name_position4">David Bettoni</string>
    <string name="staff_name_position5">Oscar Ortega</string>
    <string name="staff_name_position6">Gianluca Spinelli</string>
    <string name="staff_name_position7">Gary Lewin</string>
    <string name="team_photo">team photo</string>
    <string name="team_position1">Bramkarz</string>
    <string name="team_position2">Lewy obrońca</string>
    <string name="team_position3">Prawy obrońca</string>
    <string name="team_position4">Środkowy obrońca</string>
    <string name="team_position5">Środkowy obrońca</string>
    <string name="team_position6">Defensywny pomocnik</string>
    <string name="team_position7">Środkowy pomocnik</string>
    <string name="team_position8">Ofensywny pomocnik</string>
    <string name="team_position9">Lewoskrzydłowy</string>
    <string name="team_position10">Prawoskrzydłowy</string>
    <string name="team_position11">Napastnik</string>
    <string name="team_position12">Rezerwowy</string>
    <string name="team_position13">Rezerwowy</string>
    <string name="team_position14">Rezerwowy</string>
    <string name="team_position15">Rezerwowy</string>
    <string name="team_position16">Rezerwowy</string>
    <string name="team_name_position1">Anthony Lopes</string>
    <string name="team_name_position2">Jason Denayer</string>
    <string name="team_name_position3">Sinaly Diomande</string>
    <string name="team_name_position4">Mattia De Sciglio</string>
    <string name="team_name_position5">Djamel Benlamri</string>
    <string name="team_name_position6">Maxence Caqueret</string>
    <string name="team_name_position7">Bruno Guimaraes</string>
    <string name="team_name_position8">Lucas Paqueta</string>
    <string name="team_name_position9">Houssem Aouar</string>
    <string name="team_name_position10">Ryan Cherki</string>
    <string name="team_name_position11">Memphis Depay</string>
    <string name="team_name_position12">Karl Toko Ekambi</string>
    <string name="team_name_position13">Tino Kadewere</string>
    <string name="team_name_position14">Moussa Dembele</string>
    <string name="team_name_position15">Joachim Andersen</string>
    <string name="team_name_position16">Leo Dubois</string>
</resources>